--- a/src/App.css
+++ b/src/App.css
@@ -1,113 +1,15 @@
-.App {
-  text-align: center;
+:root {
+  --white-1: #FDFFFC;
+  --white-2: #F9F8F8;
+  --white-3: #FFEDDF;
+  --dark-1: #043A4E;
+  --dark-2: #032B3A;
+  --dark-3: #010E13;
+  --primary: #FF661F;
+  --secondary: #86A4C1;
+  --danger: #F71735;
+  --warning: #F99C39;
+  --info: #BFD7EA;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-.top{
-  text-align: left;
-  padding: 50px;
-}
-
-.buttons{
-  display: flex;
-  justify-content: space-around;
-  padding: 20px;
-}
-.btn1{
-  background-color: red;
-  border-color: red;
-  padding: 20px 40px;
-  border-radius: 5%;
-  font-weight: bold;
-}
-.btn2{
-  background-color: rgb(61, 240, 91);
-  border-color: rgb(61, 240, 91);
-  padding: 20px 40px;
-  border-radius: 5%;
-  font-weight: bold;
-}
-
-.midbox{
-  display: grid;
-  grid-template-columns: 20% 80%;
-}
-
-.friends{
-  text-align: left;
-  padding: 20px;
-  border-right: 2px solid black;
-}
-
-.friends-top{
-  display: flex;
-  justify-content: space-between;
-}
-
-.add-btn{
-  border-radius: 50% !important; 
-}
-
-.plus1{
-  font-weight: bold;
-}
-
-ul{
-  list-style: none;
-  padding: 10px 0;
-}
-
-.searchbox{
-  display: flex;
-  background-color: rgb(197, 190, 190);
-}
-
-.input-btn{
-  background-color: rgb(197, 190, 190);
-  border-color: rgb(197, 190, 190);
-}
-
-input[type=text] {
-  background-color: rgb(197, 190, 190);
-  color: rgb(218, 22, 22);
-  border-color: rgb(197, 190, 190);
-}
-
-.plus2{
-  font-weight: bold;
-  padding: 0 15px;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
