--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,47 @@
   --dark-3: #010E13;
   --primary: #FF661F;
   --secondary: #86A4C1;
+  --success: #5BBA6F;
   --danger: #F71735;
   --warning: #F99C39;
   --info: #BFD7EA;
 }
 
+.btn{
+  border-radius: 1em;
+  border: 0;
+  height: 2em;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.btn-circular{
+  height: 2em;
+  width: 2em;
+}
+
+.btn-primary{
+  background-color: var(--primary);
+  color: var(--white-1);
+}
+
+.btn-secondary{
+  background-color: var(--secondary);
+  color: var(--white-1);
+}
+
+.btn-success{
+  background-color: var(--success);
+  color: var(--white-1);
+}
+
+.btn-info{
+  background-color: var(--info);
+  color: var(--dark-3);
+}
+
+.ml-10{
+  margin-left: 10px;
+}
 
