--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -2,11 +2,7 @@ header{
     background: var(--white-2);
     display: flex;
     justify-content: space-between;
-    position:absolute; 
-    top:0px; 
-    left:0px; 
     height:100px; 
-    right:0px;
     overflow:hidden;
 
 }
@@ -28,18 +24,19 @@ hr{
     justify-content: space-between;
     padding: 20px;
 }
+
+.header-right img{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: 1px solid black;
+    margin-right: 10px;
+}
+
 .header-right .header-righ-info{
     display: flex;
     flex-direction: column;
 }
-/* .mid{
-    position:absolute; 
-    top:200px; 
-    bottom:200px; 
-    left:0px; 
-    right:0px; 
-    overflow:auto;
-} */
 
 footer{
     position:absolute; 
@@ -50,4 +47,26 @@ footer{
     overflow:hidden;
     align-items: center;
     font-size: 12px;
+}
+
+.btn-strip{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.btn-strip .btn-left, .btn-strip .btn-right{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.btn-right{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.content{
+    padding: 20px 40px;
 }
