--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -1,9 +1,10 @@
 .Overlay {
     inset: 0;
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: var(--dark-1);
     display: none;
     z-index: 500;
+    opacity: .5;
 }
 
 .Overlay.Show {
