added new components and updated header with userdata. added new npm library for decoding jwt

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,9 @@
   --info: #BFD7EA;
   --bg-color: #DADADA;
 }
-
+iframe{
+  display: none !important;
+}
 .btn{
   border-radius: 1em;
   border: 0;
