--- a/src/Components/Inputs/Inputs.css
+++ b/src/Components/Inputs/Inputs.css
@@ -101,6 +101,7 @@
     display: none;
     border-radius: 5px;
     box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
 .multi-select-container-input input {
