--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -52,7 +52,7 @@ footer{
 .content{
     padding: 20px 40px;
     max-height: calc(100vh - 120px);
-    overflow: scroll;
+    overflow: hidden;
     background-color: var(--bg-color);
 }
 
@@ -62,7 +62,11 @@ footer{
     width: 100%;
     margin-top: 10px;
     padding: 10px;
-    max-height: calc(100vh - 210px);
+    max-height: calc(100vh - 205px);
+    overflow: hidden;
+}
+.friend-card-data{
+    max-height: calc(100vh - 290px);
     overflow: scroll;
 }
 
