--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -13,7 +13,7 @@
 
 .Modal {
     position: fixed;
-    background-color: #ffffffdd;
+    background-color: #ffffff;
     width: 80vw;
     height: 90vh;
     box-shadow: 0 0 4px 0px rgba(0, 0, 0, 0.15);
