--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,13 @@ iframe{
 .amt-owed{
   background-color: var(--success);
   color: var(--white-1);
-  padding: 5px;
+  padding: 0.375rem 0.75rem;
+  border-radius: 20px;
+}
+.amt-owed-to-you{
+  background-color: var(--danger);
+  color: var(--white-1);
+  padding: 0.375rem 0.75rem;
   border-radius: 20px;
 }
 
