--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
   --info: #BFD7EA;
   --bg-color: #DADADA;
 }
+html{
+  font-size: 13px;
+
+}
 iframe{
   display: none !important;
 }
@@ -61,6 +65,10 @@ iframe{
 
 .ml-10{
   margin-left: 10px;
+}
+
+.mt-10{
+  margin-top: 10px;
 }
 
 .mr-10{
